# osu-kps

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  osu-kps.sln  vcpkg.json
docs/: Home.md
docs/Miscellaneous/: Placeholder.md
docs/kps_core/: Introduction.md
jsons/: default_config.json
jsons/language/: en-us.json  zh-cn.json
osu-kps/: Resource.rc  autoplay_manager.hpp  config.hpp  integrated_kps.hpp  key_monitor.hpp  key_monitor_async.hpp  key_monitor_base.hpp  key_monitor_hook.hpp  key_monitor_malody.hpp  key_monitor_memory.hpp  key_window.cpp  key_window.h  keys_manager.hpp  kps_calculator.hpp  main.cpp  my_multi_language.hpp  osu-kps.vcxproj  osu-kps.vcxproj.filters  packages.config  resource.h
resources/jsons/: default_config.json
resources/jsons/language/: en-us.json  zh-cn.json
source/: .gitignore  CMakeLists.txt
source/src/: MemoryReaderOsu.cpp  MemoryReaderOsu.h  Resource.aps  Resource.rc  autoplay_manager.hpp  config.hpp  integrated_kps.hpp  key_monitor.hpp  key_monitor_async.hpp  key_monitor_base.hpp  key_monitor_dinput.hpp  key_monitor_hook.hpp  key_monitor_memory.hpp  key_window.cpp  key_window.h  keys_manager.hpp  kps_calculator.hpp  main.cpp  my_multi_language.hpp
source/src/utils/: ConvertCode.hpp  WindowsResource.cpp  WindowsResource.h  WindowsResource.hpp  code_conv.hpp  config_manager.hpp  d2d_helper.hpp  hook.hpp  keyboard_char.hpp  multi_language.hpp  resource_loader.hpp  timer_thread.hpp  window.hpp
source/src/utils/d2d/: SharedComPtr.hpp
test/: CMakeLists.txt
test/src/: TestConvertCode.cpp  TestSharedComPtr.cpp  TestWindowsResource.cpp
utils/: code_conv.hpp  config_manager.hpp  d2d_helper.hpp  hook.hpp  keyboard_char.hpp  multi_language.hpp  resource_loader.hpp  timer_thread.hpp  window.hpp
